--- a/admin.html
+++ b/admin.html
@@ -24,14 +24,14 @@
     <a onclick="showSection('reports')"><i class="fas fa-file-alt"></i> Reports</a>
     <a onclick="showSection('compliance')"><i class="fas fa-shield-alt"></i> Compliance Monitoring</a>
     <a onclick="showSection('map')"><i class="fas fa-map"></i> GIS Map</a>
+    <a href="login.html"><i class="fa-solid fa-arrow-right-from-bracket"></i> Logout</a>
   </div>
 
   <div class="main-content">
     <div class="topbar">
       <h1 id="sectionTitle">Dashboard</h1>
       <div>
-        <i class="fas fa-bell"></i>
-        <img src="https://via.placeholder.com/30" alt="avatar" style="border-radius:50%; margin-left:10px;">
+        <!-- <img src="https://via.placeholder.com/30" alt="avatar" style="border-radius:50%; margin-left:10px;"> -->
       </div>
     </div>
 
@@ -59,6 +59,7 @@
     <div class="map-container">
       <h3 style="padding: 10px;">GIS Map Preview</h3>
       <!-- Placeholder for GIS Map -->
+       <div id="dashboard-gis-map"></div>
     </div>
   </div>
     
@@ -262,7 +263,6 @@
 </div>
 
 <!-- GIS MAP -->
- <!-- GIS MAP -->
 <div class="section hidden" id="map">
   <!-- User Table -->
   <table class="user-table" id="userTable">
