--- a/login.html
+++ b/login.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Leave Management System - Login</title>
+  <title>BFP SiteProfiler</title>
   
   <link rel="stylesheet" href="./assets/styles/login.css">
 </head>
 <body>
   <div class="login-container">
-    <h2>Leave Management System</h2>
+    <h2>BFP SiteProfiler</h2>
     <form id="loginForm">
       <div class="input-group">
         <label for="username">Username</label>
